--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+*{
+  background-color: lightblue;
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.gameArea{
+  position: relative;
+  width: 20rem;
+  height: 20rem;
+  background-color: rgb(177, 140, 140);
+  border : 5px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.snakeDot{
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: #fff;
+  border: 1px solid blue;
+}
+
+.snakeFood{
+  position: absolute;
+  top : 4rem;
+  background-color: red;
+  width: 0.5rem;
+  height: 0.5rem;
+  border: 1px solid white;
 }
